--- a/index.html
+++ b/index.html
@@ -1,6 +1,72 @@
 <html><head>
-<script type="text/javascript" src="//cdn.callrail.com/companies/938123227/8375667b7417964d3c8d/12/swap.js"></script> 
+//<script type="text/javascript" src="//cdn.callrail.com/companies/938123227/8375667b7417964d3c8d/12/swap.js"></script> 
 </head>
-<body><h1>CallRail js code hardcoded: number swapping works! 347-762-8465 !</h1>
+<body>
+  <script type="text/javascript">
+var utag_data = {
+  clean_url : "", // 
+  dom_url : "", // 
+  dom_referrer : "", // 
+  dom_title : "", // 
+  patient_status : "", // Contains the patient's status, e.g. 'logged in'.
+  patient_email_unhashed : "", // Contains the customer's email in raw text form
+  page_name : "", // Contains a user-friendly name for the page.
+  page_section : "", // Contains a user-friendly page section, e.g. 'configuration section'.
+  page_category : "", // Contains a user-friendly page category, e.g. 'appliance page'.
+  page_subcategory : "", // Contains a user-friendly page subcategory, e.g. 'refrigerator page'.
+  page_type : "", // Contains a user-friendly page type, e.g. 'cart page'.
+  search_term : "", // Contains the search term or query submitted by a visitor.
+  search_results : "", // Contains the number of results returned with a search query.
+  search_type : "", // Contains the type of search conducted by the visitor.
+  video_id : "", // Contains the video ID.
+  video_name : "", // Contains the name of the video.
+  video_length : "", // Contains the duration of the video. This value should be in seconds.
+  video_playhead : "", // Contains the time into a video at which a certain state occurs.
+  video_state : "", // Contains the state of the video, e.g. start, play, pause, milestone, end.
+  video_platform : "", // Contains the name of the video player.
+  video_player_version : "", // Contains the version of the video player.
+  video_milestone : "", // Contains the milestone of a video in percent or time as specified by the event
+  iq_event_id : "", // A system variable that contains the ID of an iQ event and used to fire a tag when an event happens.
+  tealium_event : "", // Contains the Tealium event.
+  blocked_param_values : "", // 
+  pii_values_detected : "", // 
+  location_name : "", // 
+  location_email : "", // 
+  location_address : "", // 
+  location_city : "", // 
+  location_state : "", // 
+  location_zip : "", // 
+  location_phone : "", // 
+  doctor_name : "", // 
+  doctor_email : "", // 
+  doctor_specialty : "", // 
+  appointment_service : "", // 
+  appointment_date : "", // 
+  appointment_time : "", // 
+  patient_first_name : "", // 
+  patient_last_name : "", // 
+  patient_phone_number : "", // 
+  patient_gender : "", // 
+  patient_email_hashed : "", // 
+  patient_city : "", // 
+  patient_country : "", // 
+  patient_zip : "", // 
+  ga_client_id : "", // 
+  iq_view_id : "", // A system variable that contains the ID of an iQ page event and used to fire a tag when a page view event happens.
+  page_section_name : "" // 
+}
+</script>
+
+<!-- Loading script asynchronously -->
+<script type="text/javascript">
+    (function(a,b,c,d){
+    a='https://tags.tiqcdn.com/utag/sales-sarahsmith/healthcare/prod/utag.js';
+    b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=true;
+    a=b.getElementsByTagName(c)[0];a.parentNode.insertBefore(d,a);
+    })();
+</script>
+
+    
+  <h1>CallRail js code hardcoded no longer hardcoded - does call swapping show 347 or different? 347-762-8465 !</h1>
 </br>
 <div id="cr-form-FORfdc537bd52d44fe48406b405ad7ef038"></div></body></html>
