--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html><head>
-//<script type="text/javascript" src="//cdn.callrail.com/companies/938123227/8375667b7417964d3c8d/12/swap.js"></script> 
+
 </head>
 <body>
   <script type="text/javascript">
@@ -64,7 +64,9 @@ var utag_data = {
     b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=true;
     a=b.getElementsByTagName(c)[0];a.parentNode.insertBefore(d,a);
     })();
+  console.log('utag loaded');
 </script>
+
 
     
   <h1>CallRail js code hardcoded no longer hardcoded - does call swapping show 347 or different? 347-762-8465 !</h1>
