--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@ var utag_data = {
 </script>
 
     
-
-
-    
-  <h1>CallRail js code hardcoded no longer hardcoded - does call swapping show 347 or different? 347-762-8465 !</h1>
+  <h1>CallRail is only installed through Tealium!</h1></br>
+ <div>
+    <!-- the following phone number will be replaced -->
+    <a href="tel:+13477628465">Call to book an appointment at 347-762-8465</a>
+  </div>
 </br>
 <div id="cr-form-FORfdc537bd52d44fe48406b405ad7ef038"></div></body></html>
